<resources>
    <string name="app_name">WalkingGroup</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Log in</string>
    <string name="activity_login_new_user_create_account">New User? Create an account.</string>
    <string name="btn_signup">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="apikey">99CC9DDB-3692-475A-A7D7-9E74C67DA048B</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="createNewWalkingGroup">Create New Walking Group</string>
    <string name="groupName">Group Name:</string>
    <string name="groupNameHint">Descriptive Name</string>
    <string name="walkingTo">Walking To:</string>
    <string name="walkingToHint">Location</string>
    <string name="meetAt">Meeting At:</string>
    <string name="meetAtHint">Meeting Place</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="my_groups">My Groups</string>
    <string name="users_I_monitor">Users I\'m Monitoring</string>
    <string name="logout">Log out</string>
    <string name="enter_address_or_zip_code">Enter Address or Zip Code</string>
    <string name="add_group">Add Group</string>
    <string name="monitoring_others">Users I Monitor</string>
    <string name="add">add</string>
    <string name="remove">REMOVE</string>
    <string name="remove_monitored_user">Remove Monitored User</string>
    <string name="tap_on_the_user_you_wish_to_remove">Tap on the user you wish to remove</string>
    <string name="users_monitoring_me">Users Monitoring Me</string>
    <string name="remove_user_monitoring_me">Remove User Monitoring Me</string>
    <string name="your_current_groups">Your Current Groups:</string>
    <string name="leave_group">Leave group</string>
    <string name="remove_member">Remove Member</string>
    <string name="remove_group_member">Remove Group Member</string>
    <string name="group_going_to">The Walking Group is going to</string>
    <string name="join_or_leave">.  You can Join or Leave.</string>
    <string name="join">Join</string>
    <string name="you_are_group_leader">You are the Group Leader!  It is going to</string>
    <string name="join_or_leave_child">.  You can join or leave your child from this group.</string>
    <string name="join_your_child">Join your child</string>
    <string name="child_already_in_group">The child is already in the group</string>
    <string name="joined_user">Joined user: </string>
    <string name="did_not_monitor_user">You did not monitor this user</string>
    <string name="leave_user">Leave user: </string>
    <string name="child_not_in_group">The child is not in the group</string>
    <string name="joined_user_null">Joined user null</string>
    <string name="join_options">You can join yourself into the group by clicking JOIN YOURSELF, or join your child into the group by entering his/her email and clicking JOIN YOUR CHILD</string>
    <string name="already_in_group">You are already in the group</string>
    <string name="leave_options">You can leave yourself from the group by clicking LEAVE YOURSELF, or leave your child from the group by entering his/her email and clicking LEAVE YOUR CHILD</string>
    <string name="you_are_not_in_the_group">You are not in the group</string>
    <string name="my_profile">My Profile</string>
    <string name="parent_dashboard">Parent Dashboard</string>
    <string name="messages">Messages</string>
    <string name="Date_Time_Format">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="edit">edit</string>
    <string name="edit_profile">edit profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birth_year">Birth Year</string>
    <string name="birth_month">Birth Month</string>
    <string name="address">Address</string>
    <string name="home_phone">Home Phone</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="grade">Grade</string>
    <string name="emergency_contact_info">Emergency Contact Info</string>
    <string name="save">save</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="edit_info_successful">User info changed successfully!</string>
    <string name="monitored_by">Monitored By</string>
    <string name="name_of_sender">Name of sender</string>
    <string name="message_detail">Message detail</string>
    <string name="my_messages">My messages</string>
    <string name="me">me</string>
    <string name="message_received">Message received</string>
    <string name="start_location_tracking">Start Location Tracking</string>
    <string name="stop_location_tracking">Stop Location Tracking</string>
    <string name="groups_of_monitored_users">Groups of Monitored Users</string>
    <string name="members_of_group">Members of Group</string>
    <string name="view_monitored_users_groups">Child Groups</string>
    <string name="send">Send</string>
    <string name="send_message_to_group">Send message to group</string>
    <string name="message_for_parents_and_group_leaders">message for parents and group leaders</string>
    <string name="message_parents_and_leaders">message parents and leaders</string>
    <string name="panic">Panic</string>
    <string name="emergency">Emergency</string>
    <string name="unread_messages">Unread Messages:</string>
    <string name="unread_messages_number">0</string>
    <string name="change_email_dialog">If you want to change your email you need to re-login.</string>
    <string name="change_email_dialog_title">Email Change Confirmation</string>
    <string name="ok">Ok</string>
    <string name="date_to_string_format">MM/dd/yyyy HH:mm:ss</string>
    <string name="points_store">Points Store</string>
    <string name="permission_requests">Permission Requests</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="status_detail">Status Detail</string>
    <string name="email_of_new_leader_hint">Input email of new leader</string>
    <string name="change_leader">Change Leader</string>
    <string name="become_leader">Become Leader</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="apply_leader">Apply Leader</string>
    <string name="apply_change_leader">Apply/Change Leader</string>
    <string name="message_group">Message Group</string>
    <string name="message_to_group">Message to group</string>
    <string name="currentPoints">Points: 500</string>
    <string name="colorScheme1">Upgrade Color Scheme 1 ----- Cost: 50</string>
    <string name="colorScheme1Bought">Upgrade Color Scheme 1 ----- Bought</string>
    <string name="colorScheme2">Upgrade Color Scheme 2 ----- Cost: 100</string>
    <string name="colorScheme2Bought">Upgrade Color Scheme 2 ----- Bought</string>
    <string name="mapIcon">Upgrade Map Icon ----- Cost: 150</string>
    <string name="mapIconBought">Upgrade Map Icon ----- Bought</string>
</resources>
