<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.CurrentGroupsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/current_groups_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <Spinner
        android:id="@+id/groupListSpinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:dropDownVerticalOffset="100dp"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_groups_toolbar"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/groupsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintTop_toBottomOf="@id/groupListSpinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/remove_group_member_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_group_member"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/messageGroupBtn" />

    <TextView
        android:id="@+id/remove_group_member_instructions"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/tap_on_the_user_you_wish_to_remove"
        android:textColor="#000000"
        app:layout_constraintLeft_toRightOf="@id/remove_group_member_checkBox"
        app:layout_constraintTop_toTopOf="@id/remove_group_member_checkBox" />

    <Button
        android:id="@+id/updateLeaderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/apply_change_leader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_location_tracking_button" />

    <Button
        android:id="@+id/stop_location_tracking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/stop_location_tracking" />

    <Button
        android:id="@+id/start_location_tracking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stop_location_tracking_button"
        android:text="@string/start_location_tracking" />


    <Button
        android:id="@+id/messageGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_group"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/updateLeaderButton" />

</android.support.constraint.ConstraintLayout>